0024220: bopargcheck returns valid for C0 shape but results of boolean operations are broken with such shapes

Added check for C0 geometries to bopargcheck command.
Test cases for issue CR24220